version 0.5 16-12-2019  refactoring web layer: adding ResponseDataService, RequestDataService, RequestData, ResponseData, ResponseDataContainer etc.  adding exception package inside core package for handling typical exceptions while processing calculation fire model